--- a/Lesson6_PhotoGallery/photos.htm
+++ b/Lesson6_PhotoGallery/photos.htm
@@ -3,8 +3,8 @@
 <head>
    <!--
     Program Name:  Photo Gallery Application
-    Author: 
-    Date:   
+    Author: Kate Motsett
+    Date: November 4, 2016
     Filename: photos.htm
    -->
     
